<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/plant_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@color/black" />

            <ImageButton
                android:id="@+id/plant_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/plant_title_label" />

            <EditText
                android:id="@+id/plant_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plant_title_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/plant_place_label" />

            <EditText
                android:id="@+id/plant_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plant_place_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/plant_details_label" />

    <Button
        android:id="@+id/plant_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Thu Nov 09 11:58 AEST 2023" />

    <Button
        android:id="@+id/plant_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_report_text" />

    <CheckBox
        android:id="@+id/plant_shared"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_shared_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/lat_long_cords"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:textSize="20dp"
                android:text="Lat: 29.70379, \nLong: 153.0546867" />
        </LinearLayout>
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            
            <Button
                android:id="@+id/get_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_gps" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/show_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_map"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/delete_plant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_plant"
            android:backgroundTint="@android:color/holo_red_dark" />
    </LinearLayout>


</LinearLayout>